--- a/image/templates/helm/stackrox-central/templates/02-scanner-06-deployment.yaml
+++ b/image/templates/helm/stackrox-central/templates/02-scanner-06-deployment.yaml
@@ -30,8 +30,16 @@ spec:
         traffic.sidecar.istio.io/excludeInboundPorts: "8080,8443"
         {{- include "srox.defaultAnnotations" . | nindent 8 }}
     spec:
-      {{- if ._rox.env.openshift }}
       affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchLabels:
+                  app: scanner
+              topologyKey: kubernetes.io/hostname
+        {{- if ._rox.env.openshift }}
         nodeAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
             - weight: 25
