Upgrade OSSLS to 0.9.0 (#6538)
Also adapt config file to (a) exclude all source-like files and (b) apply stricter matches for lowercase file names.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -675,6 +675,19 @@ commands:
             fi
           when: always
 
+  install-ossls:
+    steps:
+      - run:
+          name: Install ossls
+          working_directory: /tmp
+          command: |
+            wget --quiet https://github.com/gruntwork-io/fetch/releases/download/v0.3.5/fetch_linux_amd64
+            sudo install fetch_linux_amd64 /usr/bin/fetch
+            export GITHUB_OAUTH_TOKEN="$GITHUB_TOKEN"
+            fetch --repo="https://github.com/stackrox/ossls" --tag="0.9.0" --release-asset="ossls_linux_amd64" .
+            sudo install ossls_linux_amd64 /usr/bin/ossls
+            ossls version
+
   setup-egress-proxies:
     steps:
       - run:
@@ -2144,16 +2157,7 @@ jobs:
 
       - *refreshAlpineBaseImage
 
-      - run:
-          name: Install ossls
-          working_directory: /tmp
-          command: |
-            wget --quiet https://github.com/gruntwork-io/fetch/releases/download/v0.3.5/fetch_linux_amd64
-            sudo install fetch_linux_amd64 /usr/bin/fetch
-            export GITHUB_OAUTH_TOKEN="$GITHUB_TOKEN"
-            fetch --repo="https://github.com/stackrox/ossls" --tag="0.7.0" --release-asset="ossls_linux_amd64" .
-            sudo install ossls_linux_amd64 /usr/bin/ossls
-            ossls version
+      - install-ossls
 
       - *restoreGoModCache
       - setup-go-build-env
@@ -2222,16 +2226,7 @@ jobs:
       - attach_workspace:
           at: /go/src/github.com/stackrox/rox
 
-      - run:
-          name: Install ossls
-          working_directory: /tmp
-          command: |
-            wget --quiet https://github.com/gruntwork-io/fetch/releases/download/v0.3.5/fetch_linux_amd64
-            sudo install fetch_linux_amd64 /usr/bin/fetch
-            export GITHUB_OAUTH_TOKEN="$GITHUB_TOKEN"
-            fetch --repo="https://github.com/stackrox/ossls" --tag="0.7.0" --release-asset="ossls_linux_amd64" .
-            sudo install ossls_linux_amd64 /usr/bin/ossls
-            ossls version
+      - install-ossls
 
       - *restoreGoModCache
       - setup-go-build-env
