Hotfix upgrade tests with a prod license (#6570)
Use a prod license (added to CircleCI under ROX_PROD_LICENSE) to enable upgrade tests to still work.

Also opportunistically fix the license service to return false for whether the license is accepted unless the status is VALID or NOT_YET_VALID (following the behaviour documented in the proto file).

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3124,10 +3124,13 @@ jobs:
       - run:
           name: Setup CI License
           command: |
-            echo "Issuing a CI license for testing the build"
-            ROX_LICENSE_KEY="$(licenses/ci.sh)"
+            cci-export ROX_LICENSE_KEY "${ROX_PROD_LICENSE}"
 
-            cci-export ROX_LICENSE_KEY "$ROX_LICENSE_KEY"
+            # TODO: reinstate the below once we have a good solution.
+            # echo "Issuing a CI license for testing the build"
+            # ROX_LICENSE_KEY="$(licenses/ci.sh)"
+
+            # cci-export ROX_LICENSE_KEY "$ROX_LICENSE_KEY"
 
       - run:
           name: Install license key
